feat: refactored db to have offeredServices table
