# src/routes/clinicRoutes.ts
@@ -2,11 +2,15 @@ import { Router } from 'express';
 import { createClinic } from '../controllers/clinicController';
 import { getAllClinicsHandler } from '../controllers/getAllClinicsController';
 import { getAllLogsHandler } from '../controllers/getAllLogsController';
+import { getAllServicesHandler } from '../controllers/serviceController';
+
 
 const router = Router();
 
 router.post('/clinic-create', createClinic);
 router.get('/clinics', getAllClinicsHandler);
 router.get('/logs', getAllLogsHandler);
+router.get('/services', getAllServicesHandler);
+
 
 export default router;
